--- a/projects/ng-stator-showcase/src/app/app.component.html
+++ b/projects/ng-stator-showcase/src/app/app.component.html
@@ -75,6 +75,13 @@
     margin-right: 8px;
   }
 
+  .actions {
+    text-align: right;
+  }
+  .actions svg.material-icons {
+    width: 30px;
+  }
+
   .card svg.material-icons path {
     fill: #888;
   }
@@ -91,7 +98,7 @@
     border: 1px solid #eee;
     background-color: #fafafa;
     height: 40px;
-    width: 200px;
+    width: 500px;
     margin: 0 8px 16px;
     padding: 16px;
     display: flex;
@@ -351,15 +358,30 @@
 
   <!-- Resources -->
   <h2>Resources</h2>
-  <p>Here are some links to help you get started:</p>
+  <p>Here are some todos to help you get started:</p>
+  <span class="actions">
+    <svg (click)="sort(dir)" class="material-icons" *ngIf="inverseDir | async as dir">
+      <path *ngIf="dir === 'asc'" d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+      <path *ngIf="dir === 'desc'" d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+    </svg>
+    <svg (click)="create()" class="material-icons">
+      <path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 14h-3v3h-2v-3H8v-2h3v-3h2v3h3v2zm-3-7V3.5L18.5 9H13z"/>
+    </svg>
+  </span>
 
-  <div class="card-container">
+  <svg *ngIf="(loading | async)" class="material-icons">
+    <path d="M11 17c0 .55.45 1 1 1s1-.45 1-1-.45-1-1-1-1 .45-1 1zm0-14v4h2V5.08c3.39.49 6 3.39 6 6.92 0 3.87-3.13 7-7 7s-7-3.13-7-7c0-1.68.59-3.22 1.58-4.42L12 13l1.41-1.41-6.8-6.8v.02C4.42 6.45 3 9.05 3 12c0 4.97 4.02 9 9 9 4.97 0 9-4.03 9-9s-4.03-9-9-9h-1zm7 9c0-.55-.45-1-1-1s-1 .45-1 1 .45 1 1 1 1-.45 1-1zM6 12c0 .55.45 1 1 1s1-.45 1-1-.45-1-1-1-1 .45-1 1z"/>
+  </svg>
+
+  <span *ngIf="(error | async) as err">{{ err }}</span>
+
+  <div *ngIf="!(loading | async)" class="card-container">
     <a *ngFor="let todo of todos | async" class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"/></svg>
 
       <span>{{ todo.label }}</span>
 
-      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
+      <svg class="material-icons"><path (click)="delete(todo)" d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/></svg>
     </a>
   </div>
 
